Switch to java 17